change package name

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -28,7 +28,7 @@
             app:expandedTitleTextAppearance="@style/Text22Semi"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <com.fungeonstudio.diagonline.utils.SquareImageView
+            <com.fungeonstudio.redline.utils.SquareImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
