--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.fungeonstudio.diagonline.LoginActivity"
+    tools:context="com.fungeonstudio.redline.LoginActivity"
     tools:showIn="@layout/activity_login">
 
     <Button
