--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,11 +7,22 @@
     <dimen name="h1">22dp</dimen>
     <dimen name="h2">18dp</dimen>
     <dimen name="h3">14dp</dimen>
-    <dimen name="spacing_medium">5dp</dimen>
-    <dimen name="spacing_xlarge">35dp</dimen>
-    <dimen name="spacing_middle">10dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="spacing_large">15.0dip</dimen>
+    <dimen name="spacing_medium">5.0dip</dimen>
+    <dimen name="spacing_middle">10.0dip</dimen>
+    <dimen name="spacing_mlarge">20.0dip</dimen>
+    <dimen name="spacing_mxlarge">25.0dip</dimen>
+    <dimen name="spacing_small">3.0dip</dimen>
+    <dimen name="spacing_smlarge">18.0dip</dimen>
+    <dimen name="spacing_xlarge">35.0dip</dimen>
+    <dimen name="spacing_xmedium">7.0dip</dimen>
+    <dimen name="spacing_xmlarge">40.0dip</dimen>
+    <dimen name="spacing_xsmall">2.0dip</dimen>
+    <dimen name="spacing_xxlarge">50.0dip</dimen>
+    <dimen name="spacing_xxxlarge">55.0dip</dimen>
 </resources>
