--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -3,22 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/space16">
-    <ImageView
-        android:id="@+id/iv_user"
-        android:layout_width="45dp"
-        android:layout_height="45dp" />
+
     <RatingBar
         android:id="@+id/ratingBar"
+        style="@style/RatingBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="@dimen/space16"
-        android:layout_marginBottom="@dimen/space8"
-        android:rating="3.5"
-        android:numStars="5"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:isIndicator="true"
-        style="@style/RatingBar"
-        android:layout_toRightOf="@id/iv_user"/>
+        android:numStars="5"
+        android:rating="3.5" />
     <TextView
         android:id="@+id/tv_username"
         android:layout_width="wrap_content"
